немного добавил картинок

--- a/Krabs/Krabs/Krabs.csproj
+++ b/Krabs/Krabs/Krabs.csproj
@@ -212,6 +212,13 @@
     <None Include="Resources\27-Edit_Text_256x256_35395.png" />
     <None Include="Resources\print_46933.png" />
     <None Include="Resources\businesspackage_additionalpackage_box_add_insert_negoci_2335.png" />
+    <None Include="Resources\folder_image_people_16877.png" />
+    <None Include="Resources\book_1426.png" />
+    <None Include="Resources\contacts_address_book_22972.png" />
+    <None Include="Resources\live_contacts_15412.png" />
+    <None Include="Resources\price-scan-scanner-bar-barcode-code_108573.png" />
+    <None Include="Resources\list_notes_930.png" />
+    <None Include="Resources\report256_24829.png" />
     <Content Include="SqlServerTypes\readme.htm" />
     <Content Include="SqlServerTypes\x64\msvcr120.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
