--- a/Krabs/Krabs/Krabs.csproj
+++ b/Krabs/Krabs/Krabs.csproj
@@ -145,6 +145,12 @@
     <Compile Include="Zacaz.Designer.cs">
       <DependentUpon>Zacaz.cs</DependentUpon>
     </Compile>
+    <Compile Include="Zacaz_red.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Zacaz_red.Designer.cs">
+      <DependentUpon>Zacaz_red.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="AddClient.resx">
       <DependentUpon>AddClient.cs</DependentUpon>
     </EmbeddedResource>
@@ -182,6 +188,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Zacaz.resx">
       <DependentUpon>Zacaz.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Zacaz_red.resx">
+      <DependentUpon>Zacaz_red.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Zacaz_u.rdlc" />
     <None Include="packages.config" />
